css/styles.css
:root {
  --dark: #212529;
}


.bg-dark, .btn-dark {
  background-color: var(--dark) !important;
}

.header {
  width: 100%;
  height: 20rem;
  background-size: cover;
  background-repeat: no-repeat;
}

body {
  position: relative;
  font-family: "Segoe UI",Roboto,"Open Sans",-apple-system,BlinkMacSystemFont,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
}

.hero-header {
  height: 100vh !important;
}

.index-background {
  background-image:
    linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)),
    url("../img/ud.jpg");
  background-position: center;
}

.committees-background {
  background-image:
    linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.2)),
    url("../img/IMG_5392-2.jpg");
  background-position: center 43%;
}

.about-background {
  background-image:
    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)),
    url("../img/IMG_9252.jpg");
  background-position: center 77%;
}

.in-background {
  background-image:
    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)),
    url("../img/DSC0712.jpg");
  background-position: center;
}

.ud-background {
  background-image:
    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)),
    url("../img/IMG_9300.jpg");
  background-position: center 80%;
}

.ex-background {
  background-image:
    linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.4)),
    url("../img/IMG_0479.jpg");
  background-position: center 48%;
}

.careers-background {
  background-image:
    linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)),
    url("../img/3.jpg");
  background-position: center 80%;
}

.apply-background {
  background-image:
    linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)),
    url("../img/IMG_5088-2-2.jpg");
  background-position: center 80%;
}

.header-spacer {
  height: 65px;
}

.header-content {
  width: 100%;
  height: calc(20rem - 90px);
}

.hero-header-content {
  width: 100%;
  height: calc(100vh - 65px - 3rem);
  /* full height - header height - chevron size - 1rem buffer */
}

.footer-icon-link {
  font-size: 1.5rem;
}

.nav-transition {
  transition: background-color 0.5s;
}

@media (max-width: 575.98px) {
  nav.navbar {
    background: var(--dark);
  }
}

nav a {
  text-transform: uppercase;
  font-family: Roboto;
  font-size: 0.85rem;
  letter-spacing: 2px;
}

.full-height {
  min-height: 100vh;
}

.vertical-center {
  display: flex;
  align-items: center;
}

.image {
  width: 100%;
  height: auto;
  vertical-align: middle;
}

.logo {
  display: inline-block;
  margin: 0px 10px 10px 10px;
  width: 90px;
  overflow: hidden;
}

.logo-img {
  width: 100%;
}

.footer-text {
  font-size: 0.75rem;
  text-decoration: none;
}

.pbl-logo {
  height: 65px;
  width: auto;
  padding: 5px;
}

.pillar-img {
  width: 100%;
  max-width: 100px;
}

.bio-img {
  max-width: 150px;
}

@media (max-width: 575.98px) {
  .bio-img {
    max-width: 75px;
  }
}

.bio-linkedin {
  line-height: 1.2;
  font-size: 1.25em;
}

h1.display-4 {
  margin-bottom: 3rem;
}

.community-img {
  width: 100%;
}

@media (max-width: 575.98px) {
  #title {
    font-size: 3.75rem;
  }
}

body main {
  padding-top: 65px;
  padding-bottom: 65px;
}

.committee {
  padding-top: 65px;
  padding-bottom: 65px;
}

#spy ul li a.nav-link.active, #spy ul li a.nav-link.active:hover {
  font-weight: bold;
  border-left: 3px solid;
  padding-left: 7px;
}

#spy ul li a.nav-link:hover {
  border-left: 2px solid;
  padding-left: 8px;
}

#spy ul li a.nav-link {
  color: inherit;
  padding-top: 0.2rem;
  padding-bottom: 0.2rem;
  padding-left: 10px;
  font-size: 0.9rem;
}

#spy {
  top: 130px;
}

.bio-card {
  box-shadow: 5px 10px 4px #888888;
  border-width: thin !important;
  position: relative;
  /* clip from bottom of card but allow overflowing the top */
  clip-path: polygon(0 -100%, 100% -100%, 100% 100%, 0% 100%);
}

.bio-rect-img {
  display: block;
}

.invert-img {
  filter: invert(100%);
}

.caption {
  position: absolute;
  left: 0;
  right: 0;
  bottom: 0;
  transform: translateY(100%);
  transition: all 0.3s ease;
  background-color: var(--dark);
  user-select: none;
}

.caption:hover {
  transform: translateY(0);
}

.bio-visible {
  position: absolute;
  bottom: 100%;
  left: 0;
  right: 0;
  background-color: var(--dark);
}

.bio-hidden {
  max-height: 0px;
  transition: all 0.3s ease;
  overflow: hidden;
}

.caption:hover .bio-hidden {
  max-height: 100%;
}

.role {
  color: #aaaaaa;
}

#carouselExampleControls > a.carousel-control-next {
  background: rgb(0,0,0);
  background: linear-gradient(90deg, rgba(0,0,0,0) 0%, rgba(0,0,0,0.3) 100%);
}

#carouselExampleControls > a.carousel-control-prev {
  background: rgb(0,0,0);
  background: linear-gradient(90deg, rgba(0,0,0,0.3) 0%, rgba(0,0,0,0) 100%);
}

#carouselExampleControls > a.carousel-control-next:focus, #carouselExampleControls > a.carousel-control-prev:focus {
  opacity: 0.5 !important;
}

#carouselExampleControls > a.carousel-control-next:hover, #carouselExampleControls > a.carousel-control-prev:hover {
  opacity: 0.9 !important;
}

.timeline {
  position: relative;
}

#timeline {
  padding-top: 65px;
}

@media (min-width: 576px) {
  .timeline-event {
    display: flex !important;
  }
  .timeline-date {
    display: table-cell;
    width: auto !important;
  }
  .timeline-description {
    display: table-cell;
  }
}

.timeline-event {
  display: table-row;
}

.timeline-date {
  vertical-align: top;
  line-height: inherit;
}

.timeline-description {
  vertical-align: top;
}

.timeline-marker {
  display: table-cell;
  vertical-align: top;
  position: relative;
  line-height: inherit;
}

/* bubbles */
.timeline-marker::before {
  /* border: 5px solid; */
  height: 1rem;
  width: 1rem;
  top: 0.5rem;
  left: 0;
  right: 0;
  margin: auto;
  position: relative;
  border-radius: 100%;
  background: var(--dark);
  content: "";
  display: block;
}

/* vertical line */
.timeline-marker::after {
  background-color: var(--dark);
  content: "";
  width: 3px;
  left: 0;
  right: 0;
  top: 2rem;
  bottom: 0;
  margin: auto;
  position: absolute;
}


.timeline h1, .timeline h2, .timeline h3, .timeline h4, .timeline h5, .timeline h6 {
  line-height: 2rem;

}

